[metadata]
name = vispm
version = 0.0.6.2
author = Adam
author_email = adam_banham@hotmail.com
description = A visulisation package for process mining activties
long_description = file: README.md
license = MIT
long_description_content_type = text/markdown
url = https://github.com/AdamBanham/vispm
project_urls =
    Bug Tracker = https://github.com/AdamBanham/vispm/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib >= 3.5.0

[options.packages.find]
where = src